--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Smaom</string>
-    <string name="hello_world">Velkommen til Smaom!</string>
+    <string name="app_name">ID Time</string>
+    <string name="hello_world">Stemple deg inn eller ut</string>
     <string name="action_settings">Settings</string>
 </resources>
